fix styling so course list header is visible

--- a/src/styles.css
+++ b/src/styles.css
@@ -41,7 +41,7 @@
     background-color: lightgray;
     text-align: center;
     z-index: 1;
-    margin-bottom: -5px;
+    margin-top: 75px;
 }
 
 .addCourseFldAndBtn {
@@ -75,6 +75,6 @@
 }
 
 .courseList {
-    margin-top: 80px;
+    margin-top: 30px;
     z-index: -1;
 }
